# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[workspace]
resolver = "2"

members = [
    "backend",
    "server",
    "apiclient",
    "coreclient",
    "test_harness",
    "types",
    "applogic",
    "protos",
    "common",
]

[workspace.dependencies]
# internal dependencies
phnxtypes = { path = "./types" }
phnxprotos = { path = "./protos" }

uuid = "1.16.0"

sqlx = { version = "0.8.5", default-features = false, features = [
    "macros",
    "uuid",
    "chrono",
    "migrate",
    "bigdecimal",
    "runtime-tokio",
] }

mimi-room-policy = { git = "https://github.com/phnx-im/mimi-room-policy", rev = "0abd9f9f1b425da3deb1b33d399a5b0b6816466a" }

tls_codec = { version = "0.4.1", features = ["derive", "serde", "mls"] }

reqwest = { version = "^0.12", features = [
    "json",
    "rustls-tls-webpki-roots",
    "brotli",
    "http2",
    "charset",
], default-features = false }
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "2.0"

privacypass = { git = "https://github.com/raphaelrobert/privacypass" }
privacypass-middleware = { git = "https://github.com/phnx-im/pp-middleware" }
openmls = { git = "https://github.com/openmls/openmls" }
openmls_memory_storage = { git = "https://github.com/openmls/openmls" }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls" }
openmls_traits = { git = "https://github.com/openmls/openmls" }
mls-assist = { git = "https://github.com/phnx-im/mls-assist" }

tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "tracing-log",
    "parking_lot",
] }

tokio = { version = "1.18.2", features = ["macros"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.13"
derive_more = { version = "0.99.19", features = ["from"] }

mimi_content = { git = "https://github.com/phnx-im/mimi-content", rev = "71495dc8fc794111c381649c4c6cbc6e258a0135" }

insta = { version = "1.42.1", features = ["json"] }

# grpc/protobuf
prost = "0.13.5"
tonic = { version = "0.13.0", features = ["tls-ring", "tls-webpki-roots"] }
tonic-build = "0.13.0"
tower-http = { version = "0.6.2", features = ["trace"] }

[patch.crates-io]
# PR: <https://github.com/RustCrypto/formats/pull/1656/files>
tls_codec = { git = "https://github.com/boxdot/formats", rev = "9846c69f91e732b493dcccf92f4c163bfc711b7d" }
# PR: <https://github.com/benwis/tower-governor/pull/53>
tower_governor = { git = "https://github.com/boxdot/tower-governor", rev = "556d9f8" }

[profile.release]
strip = true
lto = true
codegen-units = 1
