# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[workspace]
resolver = "2"

members = [
    "backend",
    "server",
    "apiclient",
    "coreclient",
    "test_harness",
    "common",
    "applogic",
    "protos",
    "mls-assist",
]

[workspace.dependencies]
# internal dependencies
aircommon = { path = "./common" }
airprotos = { path = "./protos" }
mls-assist = { path = "./mls-assist" }

uuid = "1.16.0"

sqlx = { version = "0.8.5", default-features = false, features = [
    "macros",
    "uuid",
    "chrono",
    "migrate",
    "bigdecimal",
    "runtime-tokio",
] }

mimi-room-policy = { git = "https://github.com/phnx-im/mimi-room-policy", rev = "6406e6d84c1219da3afcccb91007f2fdaaf61193" }

tls_codec = { version = "0.4.1", features = ["derive", "serde", "mls"] }

reqwest = { version = "^0.12", features = [
    "json",
    "rustls-tls-webpki-roots",
    "brotli",
    "http2",
    "charset",
], default-features = false }
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "2.0"
blake3 = "1.8.2"
sha2 = "0.10.9"

openmls_traits = { version = "0.4.1", git = "https://github.com/openmls/openmls", branch = "konrad/sqlx_provider" }
privacypass = { git = "https://github.com/raphaelrobert/privacypass" }
privacypass-middleware = { git = "https://github.com/phnx-im/pp-middleware" }
openmls = { version = "0.7.1", git = "https://github.com/openmls/openmls", branch = "konrad/sqlx_provider" }
openmls_memory_storage = { version = "0.4.1", git = "https://github.com/openmls/openmls", branch = "konrad/sqlx_provider" }
openmls_rust_crypto = { version = "0.4.1", git = "https://github.com/openmls/openmls", branch = "konrad/sqlx_provider" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "tracing-log",
    "parking_lot",
] }

tokio = { version = "1.18.2", features = ["macros"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.13"
derive_more = { version = "0.99.19", features = ["from"] }
displaydoc = "0.2.5"

mimi_content = { git = "https://github.com/boxdot/mimi-content", rev = "18af569b6074ed5b63cb2d5086ffea3acfad3f02" }

insta = { version = "1.42.1", features = ["json"] }

# grpc/protobuf
prost = "0.14.0"
tonic = { version = "0.14.0", features = ["tls-ring", "tls-webpki-roots"] }
tonic-prost = "0.14.0"
tonic-prost-build = "0.14.0"
tonic-health = "0.14.0"
tower-http = { version = "0.6.2", features = ["trace"] }
tower_governor = "0.8.0"

[patch.crates-io]
# PR: <https://github.com/RustCrypto/formats/pull/1656/files>
tls_codec = { git = "https://github.com/boxdot/formats", rev = "9846c69f91e732b493dcccf92f4c163bfc711b7d" }
tls_codec_derive = { git = "https://github.com/boxdot/formats", rev = "9846c69f91e732b493dcccf92f4c163bfc711b7d" }

[profile.release]
strip = true
lto = true
codegen-units = 1
