[package]
name = "phnxapiclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11", features = ["json", "rustls-tls-webpki-roots", "brotli"] }
thiserror = "1"
phnxbackend = { path = "../backend" }
phnxserver = { path = "../server" }
tokio = { version = "1.18.2", features = ["macros"] }
tokio-tungstenite = "0.17.1"
futures-util = "0.3.21"
serde_json = "1"
http = "0.2.7"
log = "0.4.17"
base64 = "0.13.0"
mls-assist = { git = "https://github.com/phnx-im/mls-assist", branch = "konrad/interface_changes" }

[dev-dependencies]
tokio = { version = "1.18.2", features = ["macros"] }
uuid = "1.0.0"
wiremock = "0.5"
actix = "0.13.0"
actix-web = "^4.0"
actix-web-actors = "4.1.0"
env_logger = "0.9.0"
