# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "phnxapiclient"
version = "0.1.0"
edition = "2024"
publish = false
description = "HTTP and GRPC client for the server API"

[dependencies]
phnxprotos.workspace = true
phnxtypes.workspace = true

thiserror = { workspace = true }
tracing = "0.1.41"
mls-assist = { workspace = true }
tls_codec = { workspace = true }
url = "2"
tonic.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
tokio = { version = "1.18.2", features = ["macros"] }
uuid = "1.0.0"
tracing-subscriber = { workspace = true }
