# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "phnxapplogic"
version = "0.1.0"
authors = ["Phoenix R&D GmbH <hello@phnx.im>"]
edition = "2021"


[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
thiserror = "1.0"
log = "^0.4.14"
pretty_env_logger = "0.5"
uuid = { version = "1", features = ["v4"] }
phnxcoreclient = { path = "../coreclient" }
phnxapiclient = { path = "../apiclient" }
phnxtypes = { path = "../types" }
anyhow = { version = "1.0", features = ["backtrace"] }
openmls = { git = "https://github.com/openmls/openmls", branch = "konrad/pgi_2" }
serde = { version = "1", features = ["derive"] }
tls_codec = { workspace = true }

# Feature dart-bridge
simple_logger = { version = "4.2.0" }
tokio = { version = "1.29.0", features = ["rt", "macros"] }
flutter_rust_bridge = { version = "=1.80.1" }


[build-dependencies]

# [profile.release]
# strip = true      # Automatically strip symbols from the binary.
# lto = true
# codegen-units = 1
