# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "phnxapplogic"
version = "0.1.0"
authors = ["Phoenix R&D GmbH <hello@phnx.im>"]
edition = "2021"
publish = false
description = "Multi-platform client application logic"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

# Silence warnings caused by the `frb` macro (since Rust 1.84.0).
#
# <https://github.com/fzyzcjy/flutter_rust_bridge/issues/2425>
# <https://github.com/fzyzcjy/flutter_rust_bridge/issues/2493>
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
tracing = "0.1"
tracing-subscriber = { workspace = true }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
phnxcoreclient = { path = "../coreclient" }
phnxapiclient = { path = "../apiclient" }
phnxtypes = { path = "../types" }
anyhow = { version = "1", features = ["backtrace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.39", features = ["rt", "macros"] }
flutter_rust_bridge = { version = "=2.7.0", features = ["chrono", "uuid"] }
notify-rust = "4"
chrono = { workspace = true }
jni = "0.21"

# Workspace dependencies
openmls = { workspace = true }
tokio-util = "0.7.13"
tokio-stream = "0.1.17"
