# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "phnxapplogic"
version = "0.1.0"
authors = ["Phoenix R&D GmbH <hello@phnx.im>"]
edition = "2021"
publish = false
description = "Multi-platform client application logic"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

# Silence warnings caused by the `frb` macro (since Rust 1.84.0).
#
# <https://github.com/fzyzcjy/flutter_rust_bridge/issues/2425>
# <https://github.com/fzyzcjy/flutter_rust_bridge/issues/2493>
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
phnxcoreclient = { path = "../coreclient" }
phnxapiclient = { path = "../apiclient" }
phnxtypes = { path = "../types" }

tracing = "0.1"
tracing-subscriber = { workspace = true }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
anyhow = { version = "1", features = ["backtrace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.39", features = ["rt", "macros"] }
flutter_rust_bridge = { version = "=2.7.1", features = ["chrono", "uuid"] }
notify-rust = "4"
chrono = { workspace = true }
jni = "0.21"
tokio-util = { workspace = true }
tokio-stream = "0.1.17"
blake3 = "1.5.5"
bytes = "1.10.0"
memmap2 = "0.9.5"
regex = "1.11.1"
flate2 = "1.1.0"
tar = "0.4.44"
pulldown-cmark = "0.12.2"
thiserror = "2.0.11"
mimi_content = { workspace = true }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tempfile = "3.17.1"
