# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "phnxbackend"
version = "0.1.0"
authors = ["Phoenix R&D <hello@phnx.im>"]
edition = "2021"
include = ["./migrations/**"]
publish = false
description = "Implements the local and the federation part of the protocol logic on the server side"

[dependencies]
thiserror = { workspace = true }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1.53"
uuid = { version = "1.0.0", features = ["v4", "serde"] }
# Rust crypto dependencies
tracing = { version = "0.1.35", features = ["log"] }
opaque-ke = { version = "3.0.0-pre.5", features = ["argon2"] }
sqlx = { workspace = true, features = ["postgres", "tls-rustls"] }
tokio = "1"


phnxtypes = { workspace = true }
mls-assist = { workspace = true }
tls_codec = { workspace = true }
privacypass = { workspace = true }

[dev-dependencies]
phnxtypes = { path = "../types", features = ["test_utils"] }

[features]
test_utils = ["phnxtypes/test_utils"]
