# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "phnxbackend"
version = "0.1.0"
authors = ["Phoenix R&D <hello@phnx.im>"]
edition = "2024"
include = ["./migrations/**"]
publish = false
description = "Implements the local and the federation part of the protocol logic on the server side"

[dependencies]
phnxtypes = { workspace = true }
phnxprotos = { workspace = true }

thiserror = { workspace = true }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1.53"
uuid = { version = "1.0.0", features = ["v4", "serde"] }
# Rust crypto dependencies
tracing = { version = "0.1.35", features = ["log"] }
sqlx = { workspace = true, features = ["postgres", "tls-rustls"] }
mimi-room-policy = { workspace = true }
tokio = "1"
serde_json = "1.0.140"

mls-assist = { workspace = true }
tls_codec = { workspace = true }
privacypass = { workspace = true }
tokio-stream = "0.1.17"
tonic = { workspace = true }
rand = "0.8.0"
tokio-util.workspace = true
futures-util = "0.3.31"
displaydoc = "0.2.5"

[dev-dependencies]
phnxtypes = { path = "../types", features = ["test_utils"] }
anyhow = "1.0.97"
insta = { workspace = true }

[features]
test_utils = ["phnxtypes/test_utils"]
