# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "phnxcommon"
version = "0.1.0"
authors = ["Phoenix R&D GmbH <hello@phnx.im>"]
edition = "2024"
publish = false
description = "Common code used in the server and client"

[dependencies]
sha2 = { version = "0.10" }
rand = { version = "0.8" }
rand_chacha = { version = "0.3" }
hkdf = { version = "0.12" }
aes-gcm = { version = "0.10" }
ed25519 = { version = "2.2", features = ["serde"] }
secrecy = { version = "0.10", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"
hex = { version = "0.4" }
tracing = { version = "0.1.35", features = ["log"] }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.0"
argon2 = { version = "0.5.3", features = ["std"] }

# Workspace dependencies
mls-assist = { workspace = true }
tls_codec = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "postgres"] }
displaydoc = "0.2.5"

[dev-dependencies]
insta = { workspace = true }
serde_json = "1.0"
criterion = "0.6"
tokio = { version = "1", features = ["macros", "rt", "time"] }

[features]
test_utils = []

[[bench]]
name = "argon_pow"
path = "benches/argon_pow.rs"
harness = false
