# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "phnxcoreclient"
version = "0.1.0"
authors = ["Phoenix R&D GmbH <hello@phnx.im>"]
edition = "2021"
publish = false
description = "Implements the protocol logic of the client component"

[lib]

[dependencies]
thiserror = { workspace = true }
openmls_traits = { workspace = true }
openmls_rust_crypto = { workspace = true }
tracing = "0.1.41"
url = "2.5"
uuid = { version = "1", features = ["v4", "serde"] }
phnxapiclient = { path = "../apiclient" }
phnxtypes = { path = "../types", features = ["sqlite"] }
opaque-ke = { version = "3.0.0-pre.5", features = ["argon2"] }
anyhow = { version = "1.0", features = ["backtrace"] }
# TODO: Replace this with a CSPRNG
rand = "0.8.4"
rand_chacha = "0.3.1"
tokio = { version = "1" }
tokio-util = { workspace = true }
image = "0.25.1"
kamadak-exif = "0.6.1"
derive_more = { version = "0.99.18", features = ["from"] }

# Persistence
refinery = { version = "0.8", features = [
    "rusqlite",
    "enums",
], git = "https://github.com/manuteleco/refinery/", rev = "63f3c39a8adb40e9e7b7f9c8b21a4fee2d685e3d" }
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled", "uuid", "chrono"] }

# Workspace dependencies
chrono = { workspace = true }
mls-assist = { workspace = true }
tls_codec = { workspace = true }
openmls = { workspace = true }
tokio-stream = { version = "0.1.17", features = ["sync"] }
trait-variant = "0.1.2"

[dev-dependencies]
phnxserver_test_harness = { path = "../test_harness" }
actix-rt = "^2.7"
phnxtypes = { path = "../types", features = ["sqlite", "test_utils"] }

[build-dependencies]

[package.metadata.cargo-machete]
ignored = [
    "kamadak-exif", # false positive due to a different crate name: exif
]
