# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aircoreclient"
version = "0.1.0"
authors = ["Phoenix R&D GmbH <hello@phnx.im>"]
edition = "2024"
publish = false
description = "Implements the protocol logic of the client component"
license = "AGPL-3.0-or-later"

[lib]

[dependencies]
thiserror = { workspace = true }
openmls_traits = { workspace = true }
openmls_rust_crypto = { workspace = true }
tracing = "0.1.41"
uuid = { version = "1", features = ["v4", "serde"] }
airapiclient = { path = "../apiclient" }
aircommon = { path = "../common" }
anyhow = { version = "1.0", features = ["backtrace"] }
# TODO: Replace this with a CSPRNG
rand = "0.8"
rand_chacha = "0.3.1"
tokio = { version = "1", features = ["rt-multi-thread"] }
image = "0.25.1"
kamadak-exif = "0.6.1"
derive_more = { workspace = true }
mimi_content = { workspace = true }

# Persistence
serde = { version = "1", features = ["derive"] }
sqlx = { workspace = true, features = ["chrono", "sqlite"] }
mimi-room-policy = { workspace = true }

# Workspace dependencies
chrono = { workspace = true }
mls-assist = { workspace = true }
tls_codec = { workspace = true }
openmls = { workspace = true }
tokio-stream = { version = "0.1.17", features = ["sync"] }
trait-variant = "0.1.2"
enumset = "1.1.5"
airprotos.workspace = true
url = "2.5.4"
reqwest = { workspace = true, features = ["stream"] }
infer = "0.19.0"
blurhash = "0.2.3"
webp = "0.3.0"
sha2 = { workspace = true }

[dev-dependencies]
airserver_test_harness = { path = "../test_harness" }
aircommon = { path = "../common", features = ["test_utils"] }
serde_json = "1.0.140"
insta = { workspace = true, features = ["json"] }
airbackend = { path = "../backend" }
tracing-subscriber = { workspace = true }

[build-dependencies]

[package.metadata.cargo-machete]
ignored = [
    "kamadak-exif", # false positive due to a different crate name: exif
]
