# SPDX-FileCopyrightText: 2025 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "mls-assist"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
openmls_traits = { workspace = true }
openmls = { workspace = true }
openmls_rust_crypto = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { version = "1.0.147", features = ["derive"] }
serde_bytes = "0.11.17"
