[package]
name = "protos"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono.workspace = true
mls-assist.workspace = true
openmls.workspace = true
phnxtypes.workspace = true

prost = "0.13.5"
thiserror.workspace = true
tls_codec.workspace = true
tonic = "0.13.0"
uuid = "1.16.0"

[build-dependencies]
tonic-build = "0.13.0"

[package.metadata.cargo-machete]
ignored = [
    "prost", # neeeded for generated tonic code
]
