# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "airprotos"
version = "0.1.0"
edition = "2024"
publish = false
description = "Protobuf and gRPC definitions of the APIs"
license = "AGPL-3.0-or-later"

[dependencies]
aircommon.workspace = true

prost.workspace = true
tonic.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tls_codec.workspace = true
openmls.workspace = true
derive_more.workspace = true
mls-assist.workspace = true
mimi-room-policy.workspace = true
displaydoc = "0.2.5"

[build-dependencies]
tonic-build.workspace = true
protoc-bin-vendored = "3.1.0"

[package.metadata.cargo-machete]
ignored = [
    "prost", # neeeded for generated tonic code
]
