# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later


[package]
name = "phnxserver"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "phnxserver"

[features]
api_docs = []


[dependencies]
phnxbackend = { path = "../backend" }
phnxtypes = { path = "../types" }
actix-web = "^4.0"
serde = "1"
config = "0.14"
async-trait = "0.1.74"
actix-web-actors = "4.2.0"
actix = "0.13"
tokio = "1"
base64 = "0.22"
thiserror = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.7"
jsonwebtoken = "9"
openmls_rust_crypto = { git = "https://github.com/openmls/openmls.git" }
privacypass = { workspace = true }
privacypass-middleware = { git = "https://github.com/phnx-im/pp-middleware" }
opaque-ke = { version = "3.0.0-pre.5", features = ["argon2"] }

# Workspace dependencies
chrono = { workspace = true }
tls_codec = { workspace = true }
reqwest = { workspace = true }
mls-assist = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
actix-rt = "^2.7"
tracing-futures = "^0.2.5"
phnxapiclient = { path = "../apiclient" }
phnxcoreclient = { path = "../coreclient" }
once_cell = "1"
phnxserver_test_harness = { path = "../test_harness" }
image = "0.25"
png = "0.17"
