# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "phnxserver"
version = "0.1.0"
edition = "2024"
publish = false
description = "Server that makes the logic implemented in the backend available to clients via a REST API"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "phnxserver"

[features]
api_docs = []

[[bench]]
name = "bench"
harness = false

[dependencies]
phnxbackend = { path = "../backend" }
phnxtypes = { path = "../types" }
phnxprotos = { path = "../protos" }

actix-web = "^4.0"
serde = "1"
serde_json = "1.0"
config = "0.15"
actix-web-actors = "4.2.0"
actix = "0.13"
tokio = "1"
tokio-util = { workspace = true }
base64 = "0.22"
thiserror = { workspace = true }
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.2"
tracing-subscriber = { workspace = true }
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.7"
jsonwebtoken = "9"
opaque-ke = { version = "3.0.0-pre.5", features = ["argon2"] }
zeroize = "1.8.1"
tls_codec = { workspace = true }
reqwest = { workspace = true }
tonic = { workspace = true }
tower-http = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
uuid = { workspace = true, features = ["v4"] }
tower_governor = "0.7.0"

[dev-dependencies]
actix-rt = "^2.7"
tracing-futures = "^0.2.5"
phnxapiclient = { path = "../apiclient" }
phnxcoreclient = { path = "../coreclient" }
once_cell = "1"
phnxserver_test_harness = { path = "../test_harness" }
image = "0.25"
png = "0.17"
mimi_content = { workspace = true }
criterion = { version = "0.5.1", features = [
    "html_reports",
    "async",
    "async_tokio",
] }
