# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "phnxserver"
version = "0.1.0"
edition = "2024"
publish = false
description = "Server that makes the logic implemented in the backend available to clients via a REST API"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "phnxserver"

[features]
api_docs = []

[[bench]]
name = "bench"
harness = false

[dependencies]
phnxbackend = { path = "../backend" }
phnxcommon = { path = "../common" }
phnxprotos = { path = "../protos" }

serde = "1"
serde_json = "1.0"
config = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = { workspace = true }
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.2"
tracing-subscriber = { workspace = true }
tracing-bunyan-formatter = "0.3"
jsonwebtoken = "9"
zeroize = "1.8.1"
tls_codec = { workspace = true }
reqwest = { workspace = true }
tonic = { workspace = true }
tower-http = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
tower_governor = "0.7.0"
anyhow = "1.0.98"
tonic-health = "0.13.0"

[dev-dependencies]
tracing-futures = "^0.2.5"
phnxapiclient = { path = "../apiclient" }
phnxcoreclient = { path = "../coreclient" }
once_cell = "1"
phnxserver_test_harness = { path = "../test_harness" }
image = "0.25"
png = "0.17"
mimi_content = { workspace = true }
criterion = { version = "0.5.1", features = [
    "html_reports",
    "async",
    "async_tokio",
] }
rand = "0.8"
uuid.workspace = true
base64 = "0.21.7"
sha2 = "0.10.9"
hex = "0.4.3"
