# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "phnxserver_test_harness"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "test_runner"

[dependencies]
phnxserver = { path = "../server" }
phnxapiclient = { path = "../apiclient" }
phnxcoreclient = { path = "../coreclient" }
phnxbackend = { path = "../backend", features = ["test_utils"] }
tokio = { version = "1", features = ["process"] }
once_cell = "1"
rand = "0.8"
rand_chacha = { version = "0.3" }
uuid = { version = "1.0.0", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
mimi_content = { git = "https://github.com/phnx-im/mimi-content", rev = "71495dc8fc794111c381649c4c6cbc6e258a0135" }

# Workspace dependencies
phnxtypes = { workspace = true }
