# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "phnxserver_test_harness"
version = "0.1.0"
edition = "2024"

[dependencies]
phnxtypes = { workspace = true }
phnxserver = { path = "../server" }
phnxcoreclient = { path = "../coreclient" }
phnxbackend = { path = "../backend", features = ["test_utils"] }

tokio = { version = "1", features = ["process"] }
rand = "0.8"
rand_chacha = { version = "0.3" }
uuid = { version = "1.0.0", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
mimi_content = { workspace = true }
tracing-subscriber.workspace = true
tempfile = "3.19.1"
anyhow = "1.0.98"
