# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "phnxtypes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = { version = "0.12" }
sha2 = { version = "0.10" }
digest = { version = "0.10.2" }
rand = { version = "0.8" }
rand_chacha = { version = "0.3" }
subtle = { version = "2.4.1" }
hkdf = { version = "0.12" }
aes-gcm = { version = "0.10" }
ed25519 = { version = "1.5.2", features = ["serde"] }
secrecy = { version = "0.8", features = ["serde"] }
opaque-ke = { version = "3.0.0-pre.4", features = ["argon2"] }
privacypass = { workspace = true }
argon2 = { version = "0.5.0" }
uuid = { version = "1", features = ["v4", "serde"] }
url = { version = "2", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "^1.0"
hex = { version = "0.4" }
mls-assist = { workspace = true }
tls_codec = { workspace = true }
tracing = { version = "0.1.35", features = ["log"] }
thiserror = "^1.0"
chrono = { version = "0.4", features = ["serde"] }
