# SPDX-FileCopyrightText: 2023 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "phnxtypes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = { version = "0.12" }
sha2 = { version = "0.10" }
digest = { version = "0.10.2" }
rand = { version = "0.8" }
rand_chacha = { version = "0.3" }
hkdf = { version = "0.12" }
aes-gcm = { version = "0.10" }
ed25519 = { version = "2.2", features = ["serde"] }
secrecy = { version = "0.8", features = ["serde"] }
opaque-ke = { version = "3.0.0-pre.5", features = ["argon2"] }
argon2 = { version = "0.5.0" }
uuid = { version = "1", features = ["v4", "serde"] }
url = { version = "2", features = ["serde"] }
rusqlite = { version = "0.32", features = ["uuid"], optional = true }

serde = { version = "1", features = ["derive"] }
ciborium = "0.2"
hex = { version = "0.4" }
tracing = { version = "0.1.35", features = ["log"] }
thiserror = "^1.0"
chrono = { version = "0.4", features = ["serde"] }

# Workspace dependencies
mls-assist = { workspace = true }
tls_codec = { workspace = true }
privacypass = { workspace = true }
sqlx = { workspace = true, optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
sqlite = ["dep:rusqlite"]
sqlx = ["dep:sqlx"]
test_utils = []
